# screen-recorder

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1i3ga2g589l6lcwi2hxyfnla22ay00ai-source  afcq4sppl1p50bcgfhi1s9yz86cfkfr7-source
src/: main.rs  portal.rs  screen_record.rs
